--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,8 @@
    },
    "outputs": [],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False\n",
+    "email = \"art.vandelay@vandelay.co\" # False\n",
+    "\n",
     "\n",
     "\n",
     "\n"
