--- a/index.ipynb
+++ b/index.ipynb
@@ -213,7 +213,7 @@
    "outputs": [],
    "source": [
     "email = \"art.vandelay@vandelay.co\" # False\n",
-    "\n",
+    "s.endswith('.com')\n",
     "\n",
     "\n",
     "\n"
