Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -245,8 +245,8 @@
    },
    "outputs": [],
    "source": [
-    "'vandelay.com' # 'www.vandelay.com'\n",
-    "\"www\""
+    "start = 'vandelay.com' # 'www.vandelay.com'\n",
+    "start + \"\""
    ]
   },
   {
